--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -13,12 +13,91 @@ body {
 }
 
 form { 
-margin: 0 auto; 
-width:250px;
+    display: inline-block;
+    margin: 0 auto; 
 }
 
+.form-div{
+    display: block;
+    text-align: center;
+}
+
+button{
+    border: none;
+}
 #map {
   border: thin solid black;
   height: 500px;
   width: 650px;
+}
+
+#login-button{
+    /*
+    background-color: rgb(46, 223, 54); 
+    border: none;
+    color: white;
+    text-align: center;
+    border-radius: 12px;
+    font-size: 16px;
+    */
+    background-color: rgb(68, 228, 54); 
+    text-align: center;
+    font-size: 16px;
+    border-radius: 12px;
+    margin: 0 auto;
+    text-decoration: none;
+
+}
+
+#comment-button{
+    background-color: rgb(46, 217, 223); 
+    text-align: center;
+    font-size: 16px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+
+#comment-area{
+    margin-bottom: 10px;
+    display: block;
+    height: 100px;
+    width: 650px;
+    text-align-last: center;
+    text-align: center;
+    -moz-text-align-last: center;
+    white-space: normal;
+    font-family: Helvetica, Helvetica, sans-serif;
+}
+
+#comment-header{
+    font-size: 25px;
+    padding-top: 25px;
+    padding-right: 30px;
+    padding-bottom: 25px;
+    padding-left: 30px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 3px solid black;
+    background-color:rgb(255, 253, 208)
+
+;
+}
+
+.comment-container{
+    font-size: 14px;
+    color:rgb(14, 24, 22);
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    background-color:cornsilk;
+}
+
+.comment{
+    font-family: Helvetica, Helvetica, sans-serif;
+    font-size: 20px;
 }
